--- a/styling.css
+++ b/styling.css
@@ -30,19 +30,6 @@ body {
     padding: 20px;
 }
 
-/* Top Controls */
-.top-controls {
-    width: 75%;
-    margin-left: auto; /* pushes it to the right */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
-    padding: 15px;
-    background: white;
-    border-radius: var(--radius-md);
-    box-shadow: var(--shadow-sm);
-}
 
 
 .results-count {
@@ -110,9 +97,7 @@ body {
     gap: 20px;
     position: sticky;
     top: 20px;
-    width: fit-content;
-    min-width: 200px;
-    max-width: 280px;
+    width: 55;
     align-self: flex-start;
 }
 
